--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				Show Title: <input type="text" name="title" id="title">
 				Episode Title: <input type="text" name="artist" id="artist">
 				mp3 url: <input type="url" name="src" id="src"><br>
-				<input type="button" value="submit" onclick="jukebox.addSong()">
+				<input id="submit" type="button" value="submit" onclick="jukebox.addSong()">
 			</form>
 		</div>
 	</div>
