--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<div id="header">
+	<h2>Ye Olde Radio</h2>
+	<hr>
 	<!-- controls -->
 		<!-- play -->
 		<button class="button" id="playSong" onclick="jukebox.play()">Play</button>
@@ -22,10 +24,11 @@
 		<!-- random track -->
 		<button class="button" id="ranSong" onclick="jukebox.random()">Random Show</button><br>
 		<hr>
-		<!-- displays preloaded tracks -->
-		<h3>Avaiable Shows</h3>
+		<!-- displays preloaded tracks and added tracks -->
+		<h3>Available Shows</h3>
 		<hr>
 			<div id='tracks'>
+			
 			</div>
 			
 	</div>
@@ -37,6 +40,7 @@
 		<!-- add tracks -->
 			<form id="form">
 				<h3>Add new shows here!</h3>
+				<hr>
 				Show Title: <input type="text" name="title" id="title">
 				Episode Title: <input type="text" name="artist" id="artist">
 				mp3 url: <input type="url" name="src" id="src"><br>
